<resources>
    <string name="app_name">StockVest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="minimum_of_6_characters_with_numbers">Minimum of 6 characters with numbers</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="with_google">With Google</string>
    <string name="phone_number">Phone Number</string>
    <string name="example_phone_number">Ex 9999999999</string>
    <string name="validate">Validate</string>
    <string name="validate_phone_number">Validate Phone Number</string>
    <string name="otp_to_your_phone_number">We have sent an OTP to your phone number</string>
    <string name="verify">Verify</string>
    <string name="could_not_received">Could not received?</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_successful_description">Your account has been created, let\'s start investing in stocks and own your favorite company by opening a stock account.</string>
    <string name="create_brokerage_account">Create Brokerage Account</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password_description">Enter your registered email below to receive password reset instruction.</string>
    <string name="send">Send</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_email_description">An Email has been send to your email address {{emailAddress}}. Please click on that link to verify your email address.</string>
    <string name="resend">Resend</string>
    <string name="email_address_incorrect">Email address is incorrect</string>
    <string name="phone_number_incorrect">Phone number is incorrect</string>
    <string name="resend_or_change_number">Resend or Change Number</string>
    <string name="otp_verification_failed">OTP verification failed</string>
    <string name="otp_sent_successfully">OTP sent successfully</string>
    <string name="please_re_verify_email_address">Please re-verify email address</string>
    <string name="home">Home</string>
    <string name="watchlist">Watchlist</string>
    <string name="portfolio">Portfolio</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="buy_stock">Buy Stock</string>
    <string name="buying_power">Buying Power</string>
    <string name="investment_plus_fee">Investment + Fee</string>
    <string name="buying">Buying</string>
    <string name="percent_100">100%</string>
    <string name="percent_25">25%</string>
    <string name="percent_50">50%</string>
    <string name="percent_75">75%</string>
    <string name="buy_order_lot">Buy Order Lot</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="price">Price</string>
    <string name="click_your_buying_price_below">Click your buying price below!</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="investment">Investment</string>
    <string name="broker_fee">Broker fee</string>
    <string name="exchange_fee">Exchange fee</string>
    <string name="payment">Payment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="successfully">Successfully!</string>
    <string name="order_sent_successfully">Order sent successfully</string>
    <string name="done">Done</string>
    <string name="profit_loss">Profit/Loss</string>
    <string name="capital_gain">Capital Gain</string>
    <string name="open">Open</string>
    <string name="stock_list">Stock List</string>
    <string name="allocate">Allocate</string>
    <string name="settings">Settings</string>
    <string name="account_profile">Account Profile</string>
    <string name="security">Security</string>
    <string name="faq">FAQ</string>
    <string name="live_support">Live Support</string>
    <string name="log_out">Log Out</string>
    <string name="version_1_0_0">Version 1.0.0.</string>
    <string name="total_balance">Total Balance</string>
    <string name="pending_balance">Pending Balance</string>
    <string name="amount_0">$0</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
</resources>