<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="stocksBuyViewModel"
            type="com.chillguy.stockvest.viewmodel.bottomsheet.StocksBuyViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:paddingHorizontal="20dp"
        android:paddingTop="30dp"
        android:background="@drawable/modal_round_top">

        <RelativeLayout
            android:id="@+id/buy_stocks_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/buy_stock_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textSize="20sp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/buy_stock" />

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/cross_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>

            <RelativeLayout
                android:id="@+id/balance_and_fee_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="16dp"
                android:paddingHorizontal="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/filled_round_rect_grey"
                android:layout_below="@id/buy_stock_tv">

                <TextView
                    android:id="@+id/buying_power_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/buying_power" />

                <TextView
                    android:id="@+id/buying_balance_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="$1000" />

                <TextView
                    android:id="@+id/fee_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/buying_power_tv"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/investment_plus_fee" />

                <TextView
                    android:id="@+id/fee_amount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/buying_balance_tv"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="$0" />

            </RelativeLayout>

            <TextView
                android:id="@+id/buying_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black_80"
                android:layout_marginTop="21dp"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_below="@id/balance_and_fee_rl"
                android:fontFamily="@font/inter_regular"
                android:text="@string/buying" />

            <TextView
                android:id="@+id/buying_power_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/outlined_round_rect_black_50"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/buying_power_50"
                android:layout_below="@id/balance_and_fee_rl"
                android:fontFamily="@font/inter_regular"
                android:text="@string/percent_25" />

            <TextView
                android:id="@+id/buying_power_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/outlined_round_rect_black_50"
                android:layout_toStartOf="@id/buying_power_75"
                android:paddingVertical="5dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="10dp"
                android:layout_below="@id/balance_and_fee_rl"
                android:fontFamily="@font/inter_regular"
                android:text="@string/percent_50" />

            <TextView
                android:id="@+id/buying_power_75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="10sp"
                android:background="@drawable/outlined_round_rect_black_50"
                android:layout_below="@id/balance_and_fee_rl"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/buying_power_100"
                android:fontFamily="@font/inter_regular"
                android:text="@string/percent_75" />

            <TextView
                android:id="@+id/buying_power_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/outlined_round_rect_black_50"
                android:layout_below="@id/balance_and_fee_rl"
                android:layout_alignParentEnd="true"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/percent_100" />

            <TextView
                android:id="@+id/buy_order_lot_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black_80"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/buying_tv"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:text="@string/buy_order_lot" />

            <TextView
                android:id="@+id/lot_plus_tv"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:layout_marginTop="16dp"
                android:layout_below="@id/buying_tv"
                android:background="@drawable/filled_round_rect_grey"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:text="@string/plus" />

            <EditText
                android:id="@+id/buy_lot_tv"
                android:layout_width="80dp"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:layout_toStartOf="@id/lot_plus_tv"
                android:layout_marginTop="16dp"
                android:layout_below="@id/buying_tv"
                android:background="@null"
                android:gravity="center"
                android:layout_marginEnd="12dp"
                android:text="@string/_0"
                android:fontFamily="@font/inter_semi_bold" />

            <TextView
                android:id="@+id/lot_minus_tv"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/buying_tv"
                android:background="@drawable/filled_round_rect_grey"
                android:layout_toStartOf="@id/buy_lot_tv"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/buy_order_lot_tv"
                android:textColor="@color/black_80"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price_plus_tv"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:layout_marginTop="20dp"
                android:layout_below="@id/buy_order_lot_tv"
                android:background="@drawable/filled_round_rect_grey"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:text="@string/plus" />

            <EditText
                android:id="@+id/buy_price_tv"
                android:layout_width="80dp"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:layout_marginTop="20dp"
                android:layout_below="@id/buy_order_lot_tv"
                android:layout_toStartOf="@id/price_plus_tv"
                android:gravity="center"
                android:background="@null"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/price_minus_tv"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black_80"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/buy_order_lot_tv"
                android:background="@drawable/filled_round_rect_grey"
                android:layout_toStartOf="@id/buy_price_tv"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/click_here_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_below="@id/price_tv"
                android:layout_marginTop="20dp"
                android:textColor="@color/black_80"
                android:textSize="12sp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/click_your_buying_price_below" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:scrollbars="none"
                android:layout_below="@id/click_here_tv"
                android:layout_marginBottom="40dp">
                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.chillguy.stockvest.customview.TableView
                        android:id="@+id/buy_price_table_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.core.widget.NestedScrollView>
            </ScrollView>


        </RelativeLayout>

        <TextView
            android:id="@+id/stocks_buy_btn"
            style="@style/StockVestGreenFilledButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/buy_stocks_container"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:text="@string/buy"
            android:textSize="16sp" />

    </RelativeLayout>

</layout>