<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="30dp"
    android:paddingBottom="16dp"
    android:background="@drawable/modal_round_top">

<ImageView
    android:id="@+id/successfully_iv"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_marginHorizontal="100dp"
    android:layout_marginTop="30dp"
    android:scaleType="centerCrop"
    android:src="@drawable/registration_successful"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/successfully_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/inter_extra_bold"
    android:text="@string/successfully"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/successfully_iv" />

<TextView
    android:id="@+id/order_sent_successfully_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/inter_regular"
    android:gravity="center"
    android:text="@string/order_sent_successfully"
    android:textColor="@color/black_60"
    android:layout_marginTop="5dp"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/successfully_tv" />

<TextView
    android:id="@+id/done_btn"
    style="@style/StockVestGreenFilledButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:paddingVertical="16dp"
    android:text="@string/done"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/order_sent_successfully_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
