<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registrationViewModel"
            type="com.chillguy.stockvest.viewmodel.RegistrationViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/logo_iv"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:fontFamily="@font/inter_extra_bold"
                android:text="@string/sign_up"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_iv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_tl"
                style="@style/StockVestTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:helperTextTextAppearance="@style/StockVestHelperTextStyle"
                app:helperTextTextColor="@color/black_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    style="@style/StockVestTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:text="@={registrationViewModel.email}"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_tl"
                style="@style/StockVestTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:helperText="@string/minimum_of_6_characters_with_numbers"
                app:helperTextTextAppearance="@style/StockVestHelperTextStyle"
                app:helperTextTextColor="@color/black_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_tl"
                app:passwordToggleDrawable="@drawable/password_toggle_state"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    style="@style/StockVestTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@={registrationViewModel.password}"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_tl"
                style="@style/StockVestTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:helperText="@string/minimum_of_6_characters_with_numbers"
                app:helperTextTextAppearance="@style/StockVestHelperTextStyle"
                app:helperTextTextColor="@color/black_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_tl"
                app:passwordToggleDrawable="@drawable/password_toggle_state"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_et"
                    style="@style/StockVestTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:text="@={registrationViewModel.confirmPassword}"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/registration_btn"
                style="@style/StockVestGreenFilledButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="16dp"
                android:text="@string/registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_tl" />

            <LinearLayout
                android:id="@+id/login_with_google_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:paddingVertical="16dp"
                style="@style/StockVestOutlinedButtonStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_btn">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:src="@drawable/google_logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/with_google"
                    android:gravity="center"
                    android:textColor="@color/black_80"
                    android:fontFamily="@font/inter_semi_bold"
                    android:layout_marginStart="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/already_have_an_account_tv" />

            </LinearLayout>

            <TextView
                android:id="@+id/already_have_an_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black_60"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_with_google_btn" />

            <TextView
                android:id="@+id/login_btn"
                style="@style/StockVestOutlinedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="16dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/already_have_an_account_tv" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/progressBar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/black_50_alpha_60">

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/black_80"
                />
        </FrameLayout>
    </FrameLayout>
</layout>