<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingBottom="16dp"
        android:background="@drawable/modal_round_top">

        <ImageView
            android:id="@+id/registration_successful_iv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/registration_successful"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/verify_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_extra_bold"
            android:text="@string/verify_email"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_successful_iv" />

        <TextView
            android:id="@+id/verify_email_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:text="@string/verify_email_description"
            android:textColor="@color/black_60"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify_email_tv" />

        <TextView
            android:id="@+id/resend_btn"
            style="@style/StockVestGreenFilledButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingVertical="16dp"
            android:text="@string/resend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify_email_description_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>